@@ -1,3 +1,9 @@
+Mon Jul 21 21:04:25 2003  David Helder  <dhelder@umich.edu>
+
+	* src/inetaddr.c (gnet_gethostbyname): Solaris gethostbyname_r()
+	   returns a struct hostent*, not an int.  Patch from 
+	   charles.  Fixes bug #118023.
+
 Wed Jun 11 20:29:44.29    Andrew Lanoix <alanoix@umich.edu>
 
 	*src/tcp.c (gnet_tcp_socket_server_accept): Pass size of
